RESOLVED FIXED80038
Glitchy scrolling on pages where the scroll layer needs to be updated on the main thread
https://bugs.webkit.org/show_bug.cgi?id=80038
Summary Glitchy scrolling on pages where the scroll layer needs to be updated on the ...
Anders Carlsson
Reported 2012-03-01 11:16:03 PST
Glitchy scrolling on pages where the scroll layer needs to be updated on the main thread
Attachments
Patch (3.65 KB, patch)
2012-03-01 11:23 PST, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2012-03-01 11:23:49 PST
Anders Carlsson
Comment 2 2012-03-01 12:05:35 PST
Note You need to log in before you can comment on or make changes to this bug.