Glitchy scrolling on pages where the scroll layer needs to be updated on the main thread https://bugs.webkit.org/show_bug.cgi?id=80038 <rdar://problem/10933831>

Reviewed by Simon Fraser.

When we need to update the scroll layer position on the main thread, we need to cache the
scroll position we sent to the main thread and assume that that's the correct scroll position.

* page/scrolling/mac/ScrollingTreeNodeMac.h:
(ScrollingTreeNodeMac):
* page/scrolling/mac/ScrollingTreeNodeMac.mm:
(WebCore::ScrollingTreeNodeMac::update):
(WebCore::ScrollingTreeNodeMac::setScrollPosition):
(WebCore::ScrollingTreeNodeMac::scrollPosition):

Canonical link: https://commits.webkit.org/97113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109386 268f45cc-cd09-0410-ab3c-d52691b4dbfc